--- a/Weather.html
+++ b/Weather.html
@@ -97,7 +97,7 @@
       </div>
       <div class="weather-forecast" id="forecast"></div>
     </div>
-    <p><a href="https://github.com/AnnaGeorgievna/Weather-2.git">Open sourse</a> code by Anna Geprgievna</p>
+    <p><a href="https://github.com/AnnaGeorgievna/Weather-2.git">Open sourse</a> code by Anna Georgievna</p>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
