--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="current">
         <div class="row">
           <div class="col-6">
-              <h4><i class="fa-solid fa-sun"></i><h4></div>
+              <h4 id="icon"><i class="fa-solid fa-sun"></i><h4></div>
           <div class="col-6">
               <div class="row">
                 <div class="col-4">
