--- a/index.html
+++ b/index.html
@@ -39,34 +39,34 @@
         <li class=feelLike>
           <img src="svg/temperature.svg" width="20px" />
           Feels like
-          <span id=feel>20°</span>
+          <span id=feel>°</span>
         </li>
         <li class=humidity>
           <img src="svg/humidity.svg" width="20px" />
           Humidity
-          <span id=hum>56%</span>
+          <span id=hum></span>
         </li>
         <li class=wind>
           <img src="svg/wind.svg" width="20px" />
           Wind
-          <span id=windy>16 km/h</span>
+          <span id=windy></span>
         </li>
       </ul>
         </div>
        <div class="col-4">
       <ul class="pres">
-        <li class=press> <img src="svg/barometer.svg" width="20px" />
-          <span id=pressure>20°</span>
+        <li class=press> <img src="svg/barometer.svg" width="18px" />
+          <span id=pressure></span>
         </li>
         <li class=sunrise>
           <img src="svg/sunrise.svg" width="20px" />
           Sunrise
-          <span id=sunRise>56%</span>
+          <span id=sunRise></span>
         </li>
         <li class=sunset>
           <img src="svg/sunset.svg" width="20px" />
           Sunset
-          <span id=sunSet>16</span>
+          <span id=sunSet></span>
         </li>
       </ul>
           </div>
