--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="row">
           <div class="col-4">
               <img src="" id="icon" alt="" width="50"/>
-              <span id="temp"><strong>21</strong></span>
+              <span id="temp"><strong></strong></span>
               <span id="celsius">C°</span></br>
-              <span id=info>Sun</span>
+              <span id=info></span>
                 </div>
         <div class="col-4">
       <ul class="wind">
@@ -70,6 +70,8 @@
         </li>
       </ul>
           </div>
+        </div>
+        <div class="forecastByHours" id="forecastHours">  
         </div>
       <div class="weather-forecast" id="forecast">  
       </div>
